[gd_scene load_steps=33 format=2]

[ext_resource path="res://logic/vehicle.gd" type="Script" id=1]
[ext_resource path="res://logic/follow_camera.gd" type="Script" id=5]
[ext_resource path="res://logic/audio_stream_player.gd" type="Script" id=6]
[ext_resource path="res://assets/audio/sounds/478133__canucklovingbrit__truck-diesel-10dodge-start.mp3" type="AudioStream" id=7]
[ext_resource path="res://scenes/explosion.tscn" type="PackedScene" id=8]
[ext_resource path="res://logic/car_base.gd" type="Script" id=9]
[ext_resource path="res://scenes/flames.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/textures/dot.png" type="Texture" id=11]
[ext_resource path="res://assets/materials/vehicles/tyre.tres" type="Material" id=12]
[ext_resource path="res://assets/materials/shield.tres" type="Material" id=13]
[ext_resource path="res://logic/Shield.gd" type="Script" id=14]
[ext_resource path="res://assets/materials/shield_outer.tres" type="Material" id=15]
[ext_resource path="res://assets/audio/sounds/420356__eponn__crash.wav" type="AudioStream" id=16]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
absorbent = true

[sub_resource type="CylinderMesh" id=38]
material = ExtResource( 12 )
radial_segments = 25

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.477039, 0.5, 1.0831 )

[sub_resource type="BoxShape" id=31]
extents = Vector3( 0.446028, 0.227331, 0.721519 )

[sub_resource type="BoxShape" id=32]
extents = Vector3( 0.468997, 0.227406, 0.798583 )

[sub_resource type="SphereMesh" id=29]

[sub_resource type="CapsuleMesh" id=30]

[sub_resource type="Gradient" id=33]
offsets = PoolRealArray( 0, 0.242236, 0.732919, 0.993789, 1 )
colors = PoolColorArray( 0.498039, 0.498039, 0.498039, 0, 0.513726, 0.513726, 0.513726, 0.533333, 0.509804, 0.509804, 0.509804, 0.54902, 0.505882, 0.505882, 0.505882, 0, 0.529412, 0.529412, 0.529412, 0 )

[sub_resource type="GradientTexture" id=34]
gradient = SubResource( 33 )

[sub_resource type="ParticlesMaterial" id=35]
lifetime_randomness = 0.22
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 1, 0 )
initial_velocity = 1.0
damping = 1.5
damping_random = 0.35
scale_random = 0.37
color_ramp = SubResource( 34 )

[sub_resource type="SpatialMaterial" id=36]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_color = Color( 0, 0, 0, 0.658824 )
albedo_texture = ExtResource( 11 )

[sub_resource type="QuadMesh" id=37]
material = SubResource( 36 )

[sub_resource type="Gradient" id=39]
offsets = PoolRealArray( 0.00621118, 0.111801, 0.571429, 1 )
colors = PoolColorArray( 0.941176, 0.854902, 0.0627451, 0.564706, 0.941176, 0.854902, 0.0627451, 1, 0.933333, 0.858824, 0.0666667, 0, 0.923637, 0.861156, 0.0685512, 0 )

[sub_resource type="GradientTexture" id=40]
gradient = SubResource( 39 )

[sub_resource type="Curve" id=41]
_data = [ Vector2( 0, 0 ), 0.0, 0.114502, 0, 0, Vector2( 0.206522, 0.834091 ), 0.69697, 0.69697, 0, 0, Vector2( 0.983696, 0.963636 ), 0.163993, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=42]
curve = SubResource( 41 )

[sub_resource type="ParticlesMaterial" id=43]
lifetime_randomness = 0.42
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
damping = 5.0
scale = 2.0
scale_random = 0.67
scale_curve = SubResource( 42 )
color = Color( 0.94902, 0.886275, 0.054902, 0.505882 )
color_ramp = SubResource( 40 )

[sub_resource type="SpatialMaterial" id=46]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id=45]
material = SubResource( 46 )

[node name="CarBase" type="Spatial"]
_import_path = NodePath(".")
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.662493, 0.4749 )
script = ExtResource( 9 )
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="CarBody" type="VehicleBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00169557, 0.222867, -0.0955184 )
physics_material_override = SubResource( 1 )
continuous_cd = true
contacts_reported = 8
contact_monitor = true
script = ExtResource( 1 )

[node name="Wheel1" type="VehicleWheel" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.668, 0.115, 1.081 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel1" type="MeshInstance" parent="CarBody/Wheel1"]
_import_path = NodePath("BODY-vehicle/wheel1-wheel")
transform = Transform( -1.09278e-08, 0.07, 0, -0.25, -3.0598e-09, 0, 0, 0, 0.25, -0.0717232, -0.01588, -0.00654483 )
mesh = SubResource( 38 )
material/0 = ExtResource( 12 )

[node name="RayCastWheel1" type="RayCast" parent="CarBody/Wheel1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.262533, -0.0640855, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collide_with_areas = true

[node name="Wheel2" type="VehicleWheel" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.574, 0.115, -0.783 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="RayCastWheel2" type="RayCast" parent="CarBody/Wheel2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.145094, -0.0793754, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Wheel2" type="MeshInstance" parent="CarBody/Wheel2"]
_import_path = NodePath("BODY-vehicle/wheel1-wheel")
transform = Transform( -1.09278e-08, 0.07, 0, -0.25, -3.0598e-09, -1.44747e-26, -1.44747e-26, -1.77159e-34, 0.25, -0.0674814, 0, -0.00573966 )
mesh = SubResource( 38 )
skeleton = NodePath("../../Wheel1")
material/0 = ExtResource( 12 )

[node name="Wheel3" type="VehicleWheel" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, -0.000690771, 0, 0.000690771, 1, -0.573678, 0.115169, 1.10416 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel3" type="MeshInstance" parent="CarBody/Wheel3"]
_import_path = NodePath("BODY-vehicle/wheel1-wheel")
transform = Transform( -1.06219e-08, 0.07, 1.92872e-18, -0.243, -3.0598e-09, 0.000173383, 0.000167857, 2.11362e-12, 0.251, 0.0664359, -0.000171244, -0.00344861 )
mesh = SubResource( 38 )
skeleton = NodePath("../../Wheel1")
material/0 = ExtResource( 12 )

[node name="RayCastWheel3" type="RayCast" parent="CarBody/Wheel3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.220176, -0.0553332, 3.82662e-05 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Wheel4" type="VehicleWheel" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.573678, 0.115169, -0.783403 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="RayCastWheel4" type="RayCast" parent="CarBody/Wheel4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.149947, -0.149668, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 2
collide_with_areas = true

[node name="Wheel4" type="MeshInstance" parent="CarBody/Wheel4"]
_import_path = NodePath("BODY-vehicle/wheel1-wheel")
transform = Transform( -1.09278e-08, 0.07, 0, -0.25, -3.0598e-09, 0, 0, 0, 0.25, 0.0689202, -0.000168979, -0.000782341 )
mesh = SubResource( 38 )
skeleton = NodePath("../../Wheel1")
material/0 = ExtResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.588269, 0.0774262 )
visible = false
shape = SubResource( 7 )

[node name="CollisionShape2" type="CollisionShape" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1.47069, 0.0120257, 0.315675, 0.027834 )
shape = SubResource( 31 )

[node name="CollisionShape3" type="CollisionShape" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.811259, -0.438815 )
shape = SubResource( 32 )

[node name="CameraBase" type="Spatial" parent="CarBody"]
transform = Transform( 0.998172, 0, 0.0604388, 0, 1, 0, -0.0604388, 0, 0.998172, -0.0157232, 1.97449, -2.31076 )

[node name="CamTargetForward" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, -0.0367441, -0.864255, 0.866993 )

[node name="MeshInstance4" type="MeshInstance" parent="CarBody/CameraBase/CamTargetForward"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, 0, 0.358226, 0 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="CamTargetForward_UD" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, -0.0367441, -2.77758, 0.866993 )

[node name="MeshInstance4" type="MeshInstance" parent="CarBody/CameraBase/CamTargetForward_UD"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, 0, 0.358226, 0 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="CamBaseForward" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, 0.077272, 0.0948564, -1.01603 )

[node name="MeshInstance3" type="MeshInstance" parent="CarBody/CameraBase/CamBaseForward"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, -0.0157232, -0.0948564, 1.7256 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="CamBaseForward_UD" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, 0.077272, -2.91146, -1.01603 )

[node name="MeshInstance3" type="MeshInstance" parent="CarBody/CameraBase/CamBaseForward_UD"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, -0.0157232, -0.0948564, 1.7256 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="CamBaseForward2" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, 0.801016, 3.1739, -12.969 )

[node name="MeshInstance3" type="MeshInstance" parent="CarBody/CameraBase/CamBaseForward2"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, -0.0157232, -0.0948564, 1.7256 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="CamBaseForward2_UD" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, 0.801016, -5.59849, -12.969 )

[node name="MeshInstance3" type="MeshInstance" parent="CarBody/CameraBase/CamBaseForward2_UD"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, -0.0157232, -0.0948564, 1.7256 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="CamTargetReverse" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, -0.157038, -0.561681, 2.8537 )

[node name="MeshInstance2" type="MeshInstance" parent="CarBody/CameraBase/CamTargetReverse"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, 0, 0, 0 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="CamTargetReverse_UD" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, -0.157038, -2.51091, 2.8537 )

[node name="MeshInstance2" type="MeshInstance" parent="CarBody/CameraBase/CamTargetReverse_UD"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, 0, 0, 0 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="CamBaseReverse" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, -0.286334, 0.0825521, 4.98907 )

[node name="MeshInstance" type="MeshInstance" parent="CarBody/CameraBase/CamBaseReverse"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, -0.0157232, -0.0825521, -6.39137 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="CamBaseReverse_UD" type="Spatial" parent="CarBody/CameraBase"]
transform = Transform( 0.998172, 0, -0.0604388, 0, 1, 0, 0.0604388, 0, 0.998172, -0.286334, -3.12503, 4.98907 )

[node name="MeshInstance" type="MeshInstance" parent="CarBody/CameraBase/CamBaseReverse_UD"]
transform = Transform( -0.0999901, 0.000338772, -0.00136103, -2.05513e-09, 0.0970391, 0.024154, 0.00140256, 0.0241516, -0.0970296, -0.0157232, -0.0825521, -6.39137 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../../Camera")
material/0 = null

[node name="MeshInstance5" type="MeshInstance" parent="CarBody/CameraBase"]
transform = Transform( -0.0998921, -0.00112154, 0.00450581, -2.05513e-09, 0.0970391, 0.024154, -0.00464329, 0.0241279, -0.0969345, 0, 0, 0 )
visible = false
mesh = SubResource( 29 )
skeleton = NodePath("../Camera")
material/0 = null

[node name="Camera" type="Camera" parent="CarBody/CameraBase"]
transform = Transform( -0.998921, -0.0112154, 0.0450581, -2.11161e-08, 0.970391, 0.24154, -0.0464329, 0.241279, -0.969344, -0.138464, 0.281651, -1.96593 )
current = true
fov = 74.0
near = 0.1
far = 1000.0
script = ExtResource( 5 )
min_distance = 3.0
height = 1.25

[node name="MeshInstance" type="MeshInstance" parent="CarBody/CameraBase/Camera"]
transform = Transform( 0.1, 0, -2.32831e-10, 5.82077e-11, 0.1, 0, 0, 0, 0.1, -1.49012e-08, 0.233574, 0.0581388 )
visible = false
mesh = SubResource( 30 )
material/0 = null

[node name="BombPosition" type="Position3D" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00169557, 0.311431, -1.48442 )

[node name="HUDPositionLocation" type="Position3D" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00169557, 1.32512, 0.101055 )

[node name="MissilePosition" type="Position3D" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00169557, 1.05756, 1.20003 )

[node name="RocketPosition" type="Position3D" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0.00169557, 0.499051, 1.69379 )

[node name="LavaLight1" type="OmniLight" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.97684, -0.387057 )
visible = false
light_color = Color( 1, 0.188235, 0, 1 )
omni_range = 20.0

[node name="OtherRaycasts" type="Spatial" parent="CarBody"]

[node name="RayCastCentreDown" type="RayCast" parent="CarBody/OtherRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.027562, 0 )
enabled = true
collide_with_areas = true

[node name="RayCastBonnetUp" type="RayCast" parent="CarBody/OtherRaycasts"]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0.9362, 0.533783 )
enabled = true
collide_with_areas = true

[node name="RayCastForward" type="RayCast" parent="CarBody/OtherRaycasts"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.9362, 1.0708 )
enabled = true
collide_with_areas = true

[node name="RayCastBackward" type="RayCast" parent="CarBody/OtherRaycasts"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.20863, -0.759133 )
enabled = true
collide_with_areas = true

[node name="RayCastLeft" type="RayCast" parent="CarBody/OtherRaycasts"]
transform = Transform( 4.37114e-08, -1, -8.74228e-08, -1, -4.37114e-08, 0, -3.82137e-15, 8.74228e-08, -1, 0.285423, 0.9362, 0.533783 )
enabled = true
collide_with_areas = true

[node name="RayCastRight" type="RayCast" parent="CarBody/OtherRaycasts"]
transform = Transform( 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, 0, 3.82137e-15, 8.74228e-08, -1, -0.260324, 0.9362, 0.533783 )
enabled = true
collide_with_areas = true

[node name="RayCastFrontRamDamage1" type="RayCast" parent="CarBody/OtherRaycasts"]
transform = Transform( 1, 0, 0, 0, 0.0187437, 0.999824, 0, -0.999824, 0.0187437, 0.444297, 0.2569, 1.39068 )
enabled = true
cast_to = Vector3( 0, -2, 0 )

[node name="RayCastFrontRamDamage2" type="RayCast" parent="CarBody/OtherRaycasts"]
transform = Transform( 1, 0, 0, 0, 0.0187437, 0.999824, 0, -0.999824, 0.0187437, -0.444303, 0.2569, 1.39068 )
enabled = true
cast_to = Vector3( 0, -2, 0 )

[node name="RayCastFrontRamDamage3" type="RayCast" parent="CarBody/OtherRaycasts"]
transform = Transform( 1, 0, 0, 0, 0.0187437, 0.999824, 0, -0.999824, 0.0187437, 0.0419025, 0.59601, 1.39068 )
enabled = true
cast_to = Vector3( 0, -2, 0 )

[node name="Lights" type="Spatial" parent="CarBody"]

[node name="LightFrontLeft" type="SpotLight" parent="CarBody/Lights"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.46672, 0.163859, 1.39401 )
light_energy = 5.0
shadow_enabled = true
spot_range = 50.0
spot_angle = 20.0

[node name="LightFrontRight" type="SpotLight" parent="CarBody/Lights"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.482884, 0.163859, 1.39401 )
light_energy = 5.0
shadow_enabled = true
spot_range = 50.0
spot_angle = 20.0

[node name="LightBackRight" type="OmniLight" parent="CarBody/Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.354893, 0.200307, -1.29508 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.1
shadow_enabled = true
shadow_reverse_cull_face = true

[node name="LightBackLeft" type="OmniLight" parent="CarBody/Lights"]
transform = Transform( -0.999595, 0, -0.0284624, 0, 1, 0, 0.0284624, 0, -0.999595, 0.362708, 0.190666, -1.31362 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.1
shadow_enabled = true
shadow_reverse_cull_face = true

[node name="LightUnder1" type="OmniLight" parent="CarBody/Lights"]
transform = Transform( -0.999595, 0, -0.0284624, 0, 1, 0, 0.0284624, 0, -0.999595, 0, -0.1, 0 )
light_energy = 2.0
shadow_enabled = true
shadow_reverse_cull_face = true
omni_range = 1.0

[node name="LightUnder2" type="OmniLight" parent="CarBody/Lights"]
transform = Transform( -0.999595, 0, -0.0284624, 0, 1, 0, 0.0284624, 0, -0.999595, 0, -0.1, 1 )
light_energy = 2.0
shadow_enabled = true
shadow_reverse_cull_face = true
omni_range = 1.0

[node name="LightUnder3" type="OmniLight" parent="CarBody/Lights"]
transform = Transform( -0.999595, 0, -0.0284624, 0, 1, 0, 0.0284624, 0, -0.999595, 0, -0.1, -1 )
light_energy = 2.0
shadow_enabled = true
shadow_reverse_cull_face = true
omni_range = 1.0

[node name="LightUnder4" type="OmniLight" parent="CarBody/Lights"]
transform = Transform( -0.999595, 0, -0.0284624, 0, 1, 0, 0.0284624, 0, -0.999595, -0.528934, -0.1, -0.0325493 )
light_energy = 2.0
shadow_enabled = true
shadow_reverse_cull_face = true
omni_range = 1.0

[node name="LightUnder5" type="OmniLight" parent="CarBody/Lights"]
transform = Transform( -0.999595, 0, -0.0284624, 0, 1, 0, 0.0284624, 0, -0.999595, 0.496284, -0.1, 0.012954 )
light_energy = 2.0
shadow_enabled = true
shadow_reverse_cull_face = true
omni_range = 1.0

[node name="Flames3D" parent="CarBody" instance=ExtResource( 10 )]
transform = Transform( 0.0338704, 0, -0.999426, 0, 1.24665, 0, 0.395754, 0, 0.013412, -3.37604e-09, 0, 0 )
emitting = false
visibility_aabb = AABB( -4, -1.01557, -0.825609, 8, 2.03114, 1.65122 )

[node name="ParticlesSmoke" type="Particles" parent="CarBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.303509, 0.715798 )
lifetime = 5.0
explosiveness = 0.16
randomness = 0.56
visibility_aabb = AABB( -4, -4.29736, -4, 8, 8, 8 )
local_coords = false
process_material = SubResource( 35 )
draw_pass_1 = SubResource( 37 )

[node name="Shield" type="Spatial" parent="CarBody"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
visible = false
script = ExtResource( 14 )

[node name="Outer_shell" type="CSGSphere" parent="CarBody/Shield"]
radial_segments = 42
rings = 15
material = ExtResource( 13 )

[node name="Inner_cut" type="CSGSphere" parent="CarBody/Shield"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
radial_segments = 24
material = ExtResource( 15 )

[node name="Explosion" parent="CarBody" instance=ExtResource( 8 )]
visible = false

[node name="crash_sound" type="AudioStreamPlayer" parent="CarBody"]
stream = ExtResource( 16 )

[node name="Lights_onfire" type="Spatial" parent="CarBody"]

[node name="OnFireLight1" type="OmniLight" parent="CarBody/Lights_onfire"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.38582, -0.192124 )
light_color = Color( 1, 0.329412, 0, 1 )
light_energy = 0.0
omni_range = 8.0

[node name="OnFireLight2" type="OmniLight" parent="CarBody/Lights_onfire"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21085, -2.18122 )
light_color = Color( 1, 0.470588, 0, 1 )
light_energy = 0.0
omni_range = 12.0

[node name="OnFireLight3" type="OmniLight" parent="CarBody/Lights_onfire"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.63362, 0.635122, -0.0496354 )
light_color = Color( 1, 0.819608, 0, 1 )
light_energy = 0.0
omni_range = 4.0

[node name="OnFireLight4" type="OmniLight" parent="CarBody/Lights_onfire"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23788, 1.99519 )
light_color = Color( 1, 0.701961, 0, 1 )
light_energy = 0.0
omni_range = 9.0

[node name="OnFireLight5" type="OmniLight" parent="CarBody/Lights_onfire"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.70778, 0.780357, -0.105502 )
light_color = Color( 1, 0.913725, 0, 1 )
light_energy = 0.0
omni_range = 7.0

[node name="Explosion2" type="Particles" parent="CarBody"]
emitting = false
amount = 20
one_shot = true
explosiveness = 0.55
local_coords = false
process_material = SubResource( 43 )
draw_pass_1 = SubResource( 45 )

[node name="Explosion2Light" type="OmniLight" parent="CarBody"]
visible = false
light_color = Color( 0.937255, 0.819608, 0.0470588, 1 )
light_energy = 10.0
omni_range = 50.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -9.087
pitch_scale = 0.56
script = ExtResource( 6 )

[connection signal="body_entered" from="CarBody" to="." method="_on_CarBody_body_entered"]
